# Tomorrowland

./: .dockerignore  .env.airgap.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README-airgap.md  README.md  SERVICES.md  agents.md  docker-compose.airgap.yml  docker-compose.litellm.yml  docker-compose.yml  mkdocs.yml  opencode.json  pyproject.toml  skill.md
.claude-flow/: CAPABILITIES.md  config.yaml  embeddings.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/: pull_request_template.md
.github/workflows/: auto-codex-from-issues.yml  backend.yml  ci.yml  claude.yml  codex-dev.yml  codex-review.yml  containers.yml  docs.yml  frontend.yml  nightly-integration.yml  pr-quality.yml  release-artifact.yml  release.yml  security.yml  smoke.yml  worker-image-check.yml
.opencode/agents/: builder.md  debugger.md  frontend.md  planner.md  release-manager.md  reviewer.md
archive/: README.md
archive/agents-missions/: issue-427-rabbitmq-sub-c.md  issue-428-rabbitmq-sub-d.md  issue-429-rabbitmq-sub-e.md  issue-440-html-preview-sandbox.md  issue-441-full-document-text-api.md
archive/implementation/: README.md  document-details-and-search.md  phase-03d-worker-pipeline.md  phase-05-preview-enrichment.md  phase-06-intelligence-layer.md  phase-10-observability.md  phase-10c-admin-readiness.md  phase-10d-monitoring-compose.md  phase-10e-structured-logs.md
archive/plans/: fix-15-audit-issues.md
docker/: backend.Dockerfile  entrypoint.sh  frontend-nginx.conf  frontend.Dockerfile  install-translation-packs.py  libretranslate.Dockerfile  ollama-embed.Dockerfile  ollama-llm.Dockerfile  ollama.Dockerfile  preview-worker.Dockerfile
docker/litellm/: config.yaml
docker/loki/: loki.yml
docker/promtail/: promtail.yml
docs/: README.md  index.md  logical-spec.md  roadmap.md  weak-points-audit.md
docs/agents/: README.md  ci-hardening.md  coding-behavior.md  documenting-features.md  issue-context-template.md  opencode.md  rollout-eval-787.md  shared-memory.md  supervisor-quality-gate.md  templates.md  token-efficiency.md
docs/api/: auth.md  documents.md  evidence.md  intelligence.md  (+3 more)
eval-results/: eval-coarse2fine.json  eval-combined.json  eval-hierarchy.json  results-baseline.json
frontend/: AGENTS.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  manifest.json
review/: 19.md
scripts/: backup-airgap-data.sh  benchmark-mcp.py  build-ollama-model-bundle.sh  build-release-artifact.sh  build-translation-model-bundle.sh  check-boolean-int-sql.py  check-prod-env.sh  check-sql-group-by.py  compare-eval-runs.py  kanban-metrics.py  load-airgap-images.sh  load-ollama-model-bundle.sh  load-translation-model-bundle.sh  meili-reindex.py  pre-commit  preflight-upgrade-check.sh  production-audit.sh  restore-airgap-data.sh  run-rollout-eval.sh  setup-env.sh  smoke-test.sh  tomorrowland-airgap.sh  upgrade-airgap.sh  validate-airgap-artifact.sh  validate-ollama-model.sh  validate-rabbitmq.sh  validate-translation-languages.sh
tests/: conftest.py  test_config.py  test_events.py  test_logging.py  test_migration_downgrade.py  test_migrations.py
(+1017 files in other folders)
