[project]
name = "tomorrowland"
version = "0.2.0"
description = "Local semantic search engine foundation"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "bcrypt>=4.1",
  "meilisearch>=0.41,<1",
  "extract-msg>=0.55",
  "fastapi>=0.111",
  "openpyxl>=3.1",
  "pika>=1.3,<2",
  "psycopg[binary]>=3.2",
  "prometheus-client>=0.20",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pypdf>=4.0",
  "PyJWT>=2.8",
  "python-docx>=1.1",
  "python-pptx>=1.0",
  "xlrd>=2.0",
  "qdrant-client>=1.10,<1.12",
  "redis>=5.0",
  "smbprotocol>=1.16,<2",
  "sqlalchemy>=2.0",
  "striprtf>=0.0.32",
  "uvicorn>=0.30",
  # Extraction additions
  "charset-normalizer>=3.0",
  "ebooklib>=0.18",
  "langdetect>=1.0.9",
  "magika>=1.0",
  "python-magic>=0.4",
  "mcp[cli]>=1.27.2",
  "ldap3>=2.9.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mkdocs-material>=9.7",
  "mkdocstrings[python]>=1.0",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "testcontainers>=4.0",
  "types-ldap3>=2.9",
  "types-openpyxl>=3.1",
]
# pip install tomorrowland[ocr] — requires tesseract + poppler in PATH
ocr = [
  "pytesseract>=0.3",
  "Pillow>=10.0",
  "pdf2image>=1.16",
]

[project.scripts]
tomorrowland-parse-worker = "services.pipeline.parse_worker:main"
tomorrowland-translate-worker = "services.pipeline.translate_worker:main"
tomorrowland-embed-worker = "services.pipeline.embed_worker:main"
tomorrowland-index-worker = "services.pipeline.index_worker:main"
tomorrowland-intelligence-worker = "services.pipeline.intelligence_consumer:main"
tomorrowland-alert-worker = "services.pipeline.alert_consumer:main"
tomorrowland-enrich-worker = "services.pipeline.enrich_worker:main"
tomorrowland-mcp-server = "services.mcp.server:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-m 'not e2e' --strict-markers --cov=src --cov-branch --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "e2e: tests that require live Docker services (RabbitMQ, etc.)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["TC001", "TC002", "TC003"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["bcrypt", "openpyxl", "openpyxl.*", "pika", "pika.*", "testcontainers", "testcontainers.*", "xlrd", "xlrd.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ebooklib", "ebooklib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langdetect", "langdetect.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ldap3", "ldap3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["magika", "magika.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "testcontainers>=4.14.2",
    "types-ldap3>=2.9.13.20260518",
]
